fix: commit 오류 수정

--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
     "test:ui": "vitest --ui",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "tsc --noEmit --skipLibCheck"
+    ]
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "tsc --noEmit",
-      "prettier --write",
-      "eslint --fix"
-    ]
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
