--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "tsc --noEmit --skipLibCheck"
+      "tsc --noEmit",
+      "prettier --write",
+      "eslint --fix"
     ]
   },
   "dependencies": {
+    "@types/node": "^22.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -38,10 +40,10 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^2.1.2",
     "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
