--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,3 +85,14 @@ jobs:
         run: |
           npm install
           npm run test:advanced
+  external:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: advanced-test
+        run: |
+          npm install
+          npm run test:external
