fix: 테스트 스크립트 수정

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "vitest",
     "test:basic": "vitest basic",
     "test:advanced": "vitest advanced",
-    "test:external": "vitest external",
+    "test:external": "vitest externalStore",
     "test:ui": "vitest --ui",
     "prepare": "husky"
   },
