--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -22,5 +23,6 @@
   },
   "include": [
     "src"
-  ]
+  ],
+   "exclude": ["node_modules", "eslint.config.js"] // 컴파일 대상에서 제외
 }
