--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,6 +4,7 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+        "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -20,5 +21,6 @@
   },
   "include": [
     "vite.config.ts"
-  ]
+  ],
+   "exclude": ["node_modules", "eslint.config.js"] // 컴파일 대상에서 제외
 }
