--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,6 +4,9 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "esModuleInterop": true,                     // 추가
+    "allowSyntheticDefaultImports": true,        // 추가
+    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
