chore: tsconfig 초기화

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,13 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "ES2015", "ES2016", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "esModuleInterop": true,                     // 추가
-    "allowSyntheticDefaultImports": true,        // 추가
-    "allowJs": true, 
-    
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
