--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,9 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@lib/*": ["src/@lib/*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
