--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -21,3 +21,14 @@ jobs:
         run: |
           npm install
           npm run test:external
+  enhanced:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: enhanced-test
+        run: |
+          npm install
+          npm run test:enhanced
