--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest",
     "test:basic": "vitest basic",
     "test:advanced": "vitest advanced",
+    "test:enhanced": "vitest enhanced",
     "test:external": "vitest externalStore",
     "test:ui": "vitest --ui",
     "prepare": "husky"
