--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2023", "DOM", "DOM.Iterable"], 
+    "lib": ["ES2023"], 
     "module": "ESNext",
     "skipLibCheck": true,
 
