chore: package.json 수정

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
+      "tsc --noEmit",
       "prettier --write",
       "eslint --fix"
     ]
