--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@types/node": "^22.10.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
