--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,9 +18,16 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@": ["src"],
+      "@components": ["src/components"],
+      "@lib": ["src/@lib"],
+      "@contexts": ["src/contexts"],
+      "@utils": ["src/utils"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
