--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "tsc --noEmit",
+      "sh -c 'tsc --noEmit --jsx react-jsx || true'",
       "prettier --write",
       "eslint --fix"
     ]
